# chat-ui

./: README.md  pyproject.toml
backend/: pyproject.toml
discord/: main.py  pyproject.toml
